# bris-inference

./: .gitignore  .prospector.yaml  README.md  config.yaml  example_jobscript.sh  job.yaml  job_script_lumi_new.sh  job_script_lumi_new_uwcw.sh  lumi_infer_p1.py  lumi_infer_p1.sh  pyproject.toml  requirements.txt  run_pytorch_infer.sh  test_inference.py  tox.ini
.github/workflow/: python-app.yml
.github/workflows/: python-package.yml  run_extensive_test.yml  run_test.yml  tox.yml
bris/: __init__.py  __main__.py  callbacks.py  cf.py  checkpoint.py  datamodule.py  ddp_strategy.py  forcings.py  forecaster.py  indices.py  inference.py  inspect.py  model.py  observations.py  output.py  predict_metadata.py  projections.py  routes.py  source.py  units.py  utils.py  writer.py
bris/config/: legacy_legendary_gnome.yaml  o96_10k_stretched_grid.yaml
bris/conventions/: __init__.py  anemoi.py  cf.py  metno.py  variable_list.py
bris/data/: __init__.py  datamodule.py  dataset.py  grid_indices.py  nativegrid_dataset.py  zip.py  zip_dataset.py
bris/data/dataset/: __init__.py  nativegrid.py  zip.py
bris/data/legacy/: dataset.py  utils.py
bris/data/legacy/distributed/: strategy.py
bris/misc/: model_analyzer.ipynb  model_analyzer.py  modelblocks.py  shapes.py
bris/model/: __init__.py  basepredictor.py  brislampredictor.py  brispredictor.py  interpolator.py  model_utils.py  multiencdecpredictor.py
bris/outputs/: __init__.py  grib.py  gridded_netcdf.py  harp.py  intermediate.py  netcdf.py  spatial.py  verif.py
bris/schema/: schema.json
bris/sources/: __init__.py  anemoidataset.py  azurestorage.py  frost.py  verif.py  verif_netcdf.py
config/: ensemble_stretched-grid.yaml  inference_UWCW_n320.yaml  interpolator.yaml  interpolator_template.yaml  legacy_legendary_gnome.yaml  md-meps-samples.yaml  multi_decoder_template.yaml  multi_domain_inference.yaml  multi_domain_inference_AA_n320.yaml  multi_domain_inference_MEPS_n320.yaml  n320.yaml  o96.yaml  o96_10k_stretched_grid.yaml  o96_metno.yaml  stretched-grid.yaml  stretched_grid_template.yaml  test_interp_infer.yaml  test_interpolator.yaml  tox_test_inference.yaml  tox_test_inference_distributed.yaml  tox_test_inference_ensemble.yaml  tox_test_inference_interp.yaml  tox_test_inference_multi.yaml  tox_test_py_inference.yaml  tox_test_train.yaml  tox_test_train_ens.yaml  tox_test_train_interp.yaml  train_cpu_test.yaml  working_example.yaml
logs/: full.err  full.out  slurm.err  slurm.out  test.err  test.out
output/: plots.py  test_output.ipynb  verif_jobscript.sh
output/logs/: test.err
tests/: benchmark_inference.py  benchmark_inference_multi.py  poc_harp.py  test_cf.py  test_checkpoints.py  test_configs.py  test_conventions_anemoi.py  test_inference.py  test_inspect.py  test_model.py  test_output.py  test_output_verif.py  test_outputs.py  test_outputs_grib.py  test_outputs_harp.py  test_outputs_intermediate.py  test_outputs_netcdf.py  test_outputs_netcdf_variable_list.py  test_outputs_spatial.py  test_outputs_verif.py  test_routes.py  test_source.py  test_sources.py  test_sources_verif.py  test_utils.py  test_variablelist.py  test_writer.py
tests/files/: checkpoint.ckpt  ensemble.ckpt  interpolator.ckpt  meps_pred_20230615T06Z_small.nc  multiencdec.ckpt  observations_for_harp.nc  verif_input.nc  verif_input_logits.nc  verif_input_no_leadtime.nc  verif_input_with_units.nc
