[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bris"
authors = [
    {name = "Magnus Sikora Ingstad", email = "magnusi@met.no"},
    {name = "Aram Salihi", email = "arams@met.no"},
    {name = "Thomas Nipen", email = "thomasn@met.no"},
    {name = "Håvard H. Haugen", email = "havardhh@met.no"}
]
description = "Package for running inference of Anemoi models"
keywords = ["meteorology", "forecast", ]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
      "Development Status :: 3 - Alpha",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      "Programming Language :: Python :: 3 :: Only",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Programming Language :: Python :: Implementation :: CPython",
      "Programming Language :: Python :: Implementation :: PyPy",
    ]
dependencies = [
    "anemoi-datasets",
    "anemoi-models",
    "anemoi-training",
    "argparse",
    "gridpp",
    "numpy",
    "pytest",
    "pytorch-lightning>=2.1",
    "torch",
    "tqdm",
    "verif",
    "zarr<=2.17",
]
optional-dependencies.tests = [
    "black",
    "coverage",
    "pep8",
    "pytest",
    "isort",
]
dynamic = ["version"]

[tool.setuptools]
# Any setuptools-specific configuration (e.g., package data, entry points) goes here
include-package-data = true

[tool.setuptools.packages.find]
include = ["bris"]

[tool.setuptools.dynamic]
version = {attr = "bris.__version__"}

[tool.setuptools.package-data]
bris = ["schema/*.json"]

[project.scripts]
bris = "bris:main"
