[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bris"
authors = [
    {name = "Magnus Sikora Ingstad", email = "magnusi@met.no"},
    {name = "Aram Salihi", email = "arams@met.no"},
    {name = "Thomas Nipen", email = "thomasn@met.no"},
    {name = "Håvard H. Haugen", email = "havardhh@met.no"},
    {name = "Lars Falk-Petersen", email = "larsfp@met.no"},
]
description = "Package for running inference of Anemoi models"
keywords = ["meteorology", "forecast", ]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "anemoi-datasets>=0.5.13",  # This includes the reorder functionality
    "gridpp~=0.7.0",
    "hydra-core~=1.3.0",
    "numpy~=1.26.0",
    "omegaconf~=2.3.0",
    "pyproj~=3.7.0",
    "pytorch-lightning>=2.1",
    "scipy~=1.15.0",
    "torch<2.6.0",
    "torch_geometric~=2.4.0",
    "torchinfo~=1.8.0",
    "tqdm~=4.67.1",
    "verif~=1.3.0",
    "zarr<=2.17",
    "anemoi-models",
    "anemoi-training>=0.1.0",
    "pip~=25.0.0",
]

optional-dependencies.tests = [
    "tox",
]

dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bris"]

[tool.setuptools.dynamic]
version = {attr = "bris.__version__"}

[tool.setuptools.package-data]
bris = ["schema/*.json"]

[project.scripts]
bris = "bris:main"

[tool.ruff]
exclude = ["bris/sources/frost.py"]

[tool.ruff.lint]
fixable = ["I"]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM",# flake8-simplify
    "I",  # isort
]
ignore = [
    "E402", # module-import-not-at-top-of-file (E402)
]

[tool.mypy]
ignore_missing_imports = true
install_types = true
exclude = [
    'bris/data/legacy',
]

[[tool.mypy.overrides]]
module = "bris.sources.frost"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "bris/sources/frost.py"]
skips = [
    "B101", # B101:assert_used
    "B614", # B614:pytorch_load_save
]
